# BSCProAutomation

./: README.md  SpreadsheetDictionary.py  credentials.json  gkeys.json  main.py  pyproject.toml  token.json
BSC/: navigation_manager.py
BSC/production_tracker/: add_production.py  production_downloader.py
BSC/prospect_tracker/: prospect_tracker.py
GoogleWorkspace/: fetch_sheet.py  scriptHandler.py
